#Top-Level CmakeLists.txt
PROJECT (PANDORA3D)

# Needs at least 2.6.3 for ctest support
CMAKE_MINIMUM_REQUIRED (VERSION 2.6.3)

OPTION (PANDORA_MAKE_TESTS "Compile and make tests for the code?" ON)

SET (CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/Modules" CACHE STRING "Path to cmake modules")

IF (NOT CMAKE_BUILD_TYPE)
  SET (CMAKE_BUILD_TYPE "Release" CACHE STRING "What kind of build this is" FORCE)
ENDIF (NOT CMAKE_BUILD_TYPE)

IF (NOT LIBRARY_OUTPUT_PATH)
  SET (LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
ENDIF (NOT LIBRARY_OUTPUT_PATH)

IF (NOT EXECUTABLE_OUTPUT_PATH)
  SET (EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
ENDIF (NOT EXECUTABLE_OUTPUT_PATH)

ENABLE_TESTING ()

FIND_PACKAGE (CXX11 REQUIRED)

IF (NOT CXX11_FOUND)
    MESSAGE (FATAL_ERROR "Your compiler don't seem to support C++11")
ENDIF (NOT CXX11_FOUND)

SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CXX11_FLAGS}")

SET (PANDORA3D_VERSION_MAJOR 0)
SET (PAMDORA3D_VERSION_MINOR 1)

FILE (MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/include)
SET (PANDORA_INCLUDE_DIR "${CMAKE_BINARY_DIR}/include")

ADD_SUBDIRECTORY (tools)
ADD_SUBDIRECTORY (PandoraCore)
