#Main CmakeLists.txt file
PROJECT (PANDORACORE)
CMAKE_MINIMUM_REQUIRED (VERSION 2.6.3)

IF (MSVC)
    ADD_DEFINITIONS (/W4)
ELSE (MSVC)
    ADD_DEFINITIONS (-Wall -Wextra -pedantic -Werror)
ENDIF (MSVC)

IF (NOT LIBRARY_OUTPUT_PATH)
  SET (LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
ENDIF (NOT LIBRARY_OUTPUT_PATH)

IF (NOT EXECUTABLE_OUTPUT_PATH)
  SET (EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
ENDIF (NOT EXECUTABLE_OUTPUT_PATH)

ADD_SUBDIRECTORY (math)
#ADD_SUBDIRECTORY (physics)
#ADD_SUBDIRECTORY (system)
