PROJECT (MATH)
CMAKE_MINIMUM_REQUIRED (VERSION 2.6.3)

IF (NOT EXECUTABLE_OUTPUT_PATH)
  SET (EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
ENDIF (NOT EXECUTABLE_OUTPUT_PATH)

IF (NOT LIBRARY_OUTPUT_PATH)
  SET (LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
ENDIF (NOT LIBRARY_OUTPUT_PATH)

# include own directories
INCLUDE_DIRECTORIES (include)

SET (Math_src
    src/vector2.cpp
    src/vector3.cpp
  )

ADD_LIBRARY (Math SHARED ${Math_src})
TARGET_LINK_LIBRARIES (Math m)

MESSAGE (STATUS "Copying Math include files")
FILE (GLOB copy_files "include/*")
FILE (COPY ${copy_files} DESTINATION ${CMAKE_BINARY_DIR}/include/Math/Math)

ADD_SUBDIRECTORY (Tests)
