PROJECT(PANDORASYSTEM)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6.3)

IF(NOT EXECUTABLE_OUTPUT_PATH)
    SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
ENDIF(NOT EXECUTABLE_OUTPUT_PATH)

IF(NOT LIBRARY_OUTPUT_PATH)
    SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
ENDIF(NOT LIBRARY_OUTPUT_PATH)

INCLUDE_DIRECTORIES(include)

SET(System_src src/PandoraException.cpp)

ADD_LIBRARY(PandoraSystem STATIC ${System_src})
