PROJECT (PANDORASYSTEM)
CMAKE_MINIMUM_REQUIRED (VERSION 2.6.3)

IF (NOT EXECUTABLE_OUTPUT_PATH)
  SET (EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
ENDIF (NOT EXECUTABLE_OUTPUT_PATH)

IF (NOT LIBRARY_OUTPUT_PATH)
  SET (LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
ENDIF (NOT LIBRARY_OUTPUT_PATH)

IF (CMAKE_COMPILER_IS_GNUCXX)
  SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror")
ENDIF (CMAKE_COMPILER_IS_GNUCXX)

INCLUDE_DIRECTORIES (include)

SET (src
  )

ADD_LIBRARY (PandoraSystem SHARED ${src})

MESSAGE (STATUS "Copying System include files")
FILE (GLOB copy_files "include/*")
FILE (COPY ${copy_files} DESTINATION ${CMAKE_BINARY_DIR}/include/System)

ADD_SUBDIRECTORY (Tests)
