PROJECT (SYSTEM)
CMAKE_MINIMUM_REQUIRED (VERSION 2.6.3)

IF (NOT EXECUTABLE_OUTPUT_PATH)
  SET (EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
ENDIF (NOT EXECUTABLE_OUTPUT_PATH)

IF (NOT LIBRARY_OUTPUT_PATH)
  SET (LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
ENDIF (NOT LIBRARY_OUTPUT_PATH)

SET (PANDORA_SYSTEM_DIR ${CMAKE_CURRENT_SOURCE_DIR})

# include own directories
INCLUDE_DIRECTORIES (include)

SET (System_src
  )

ADD_LIBRARY (System SHARED ${System_src})

ADD_SUBDIRECTORY (Tests)
