PROJECT (PHYSICS)
CMAKE_MINIMUM_REQUIRED (VERSION 2.6.3)

IF (NOT EXECUTABLE_OUTPUT_PATH)
  SET (EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
ENDIF (NOT EXECUTABLE_OUTPUT_PATH)

IF (NOT LIBRARY_OUTPUT_PATH)
  SET (LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
ENDIF (NOT LIBRARY_OUTPUT_PATH)

SET (PANDORA_PHYSICS_DIR ${CMAKE_CURRENT_SOURCE_DIR})

CONFIGURE_FILE("${PANDORA_PHYSICS_DIR}/include/config.h.in" "${CMAKE_CURRENT_BINARY_DIR}/include/config.h")

# include own directories
INCLUDE_DIRECTORIES (include ${CMAKE_CURRENT_BINARY_DIR}/include)

# include math
INCLUDE_DIRECTORIES ("${MATH_SOURCE_DIR}/include")

SET (Physics_src
  src/particle.cpp
  )

SET (Physics_headers
  include/particle.h
  ${CMAKE_CURRENT_BINARY_DIR}/include/config.h
  )

ADD_LIBRARY (Physics SHARED ${Physics_src})
TARGET_LINK_LIBRARIES (Physics Math)

install (TARGETS Physics DESTINATION lib)
install (FILES ${Physics_headers} DESTINATION include/pandora/physics)

ADD_SUBDIRECTORY (tests)
