PROJECT(PANDORAMATHTESTS)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6.3)

IF(NOT LIBRARY_OUTPUT_PATH)
    SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
ENDIF(NOT LIBRARY_OUTPUT_PATH)

IF(NOT EXECUTABLE_OUTPUT_PATH)
    SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
ENDIF(NOT EXECUTABLE_OUTPUT_PATH)

SET(Math_tests_src src/testRunner.cpp
        src/Vector2_test.cpp
        )

# Find Boost unit testing
SET(Boost_USE_STATIC_LIBS ON)
FIND_PACKAGE(Boost REQUIRED COMPONENTS unit_test_framework)

FIND_PATH(PANDORAMATH_INCLUDE_DIR PandoraMath.h PATHS
    "${CMAKE_SOURCE_DIR}/PandoraCore/Math/include"
    DOC "Path to the directory where PandoraMath.h can be found")

INCLUDE_DIRECTORIES(
    include
    ${PANDORAMATH_INCLUDE_DIR}
    ${Boost_INCLUDE_DIR}
    )

LINK_DIRECTORIES(
    ${Boost_LIBRARY_DIRS}
    )

ADD_EXECUTABLE(MathTests ${Math_tests_src})
TARGET_LINK_LIBRARIES(MathTests ${Boost_LIBRARIES} PandoraMath)
ADD_TEST(MathTest "${EXECUTABLE_OUTPUT_PATH}/MathTests")
